objects/echosign_dev1__Attachment_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
        <relationshipName>Attachment_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Document_Names__c</fullName>
        <label>Attachment Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Document__c</fullName>
        <label>Attachment Document ID&apos;s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Selection_Field__c</fullName>
        <label>Selection Determined By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Modified Date</fullName>
                    <default>true</default>
                    <label>Last Modified Date</label>
                </value>
                <value>
                    <fullName>Created Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Selection_Type__c</fullName>
        <label>File Selection from Master Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest Document</fullName>
                    <default>true</default>
                    <label>Latest Document</label>
                </value>
                <value>
                    <fullName>Oldest Document</fullName>
                </value>
                <value>
                    <fullName>All Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Master_Source_Type__c</fullName>
        <label>Attachment Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachments</fullName>
                </value>
                <value>
                    <fullName>Files</fullName>
                    <default>true</default>
                    <label>Files</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Document_Selection_Field__c</fullName>
        <label>Quote Document Selection Determined By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Modified Date</fullName>
                    <default>true</default>
                    <label>Last Modified Date</label>
                </value>
                <value>
                    <fullName>Created Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Document_Selection_Type__c</fullName>
        <label>Quote Document Selection from Quote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest Document</fullName>
                    <default>true</default>
                    <label>Latest Document</label>
                </value>
                <value>
                    <fullName>Oldest Document</fullName>
                </value>
                <value>
                    <fullName>All Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Selection_Field__c</fullName>
        <label>Quote Selection Determined By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Modified Date</fullName>
                </value>
                <value>
                    <fullName>Created Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Quote_Selection_Type__c</fullName>
        <label>Quote Selection from Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest Quote</fullName>
                </value>
                <value>
                    <fullName>Oldest Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Recipient_Relationship__c</fullName>
        <label>Related Recipient Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Field__c</fullName>
        <label>Related Selection Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Modified Date</fullName>
                    <default>true</default>
                    <label>Last Modified Date</label>
                </value>
                <value>
                    <fullName>Created Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Type__c</fullName>
        <label>Related Selection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest</fullName>
                    <default>true</default>
                    <label>Latest</label>
                </value>
                <value>
                    <fullName>Oldest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Attachment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document from Content</fullName>
                </value>
                <value>
                    <fullName>Document from EchoSign Library</fullName>
                </value>
                <value>
                    <fullName>Document from Library</fullName>
                    <default>true</default>
                    <label>Document from Library</label>
                </value>
                <value>
                    <fullName>Document from Master Object</fullName>
                </value>
                <value>
                    <fullName>Quote Document from Master Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Document from Opportunity Quote</fullName>
                </value>
                <value>
                    <fullName>Runtime Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Variable_Name__c</fullName>
        <label>Variable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add File Attachment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Attachment Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add File Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>